Fix the curve getting too big

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,6 +38,7 @@ input.accent, button.accent, td.accent {
   position: relative;
   width: 100%;
   background-size: 100% 100%;
+  max-height: 250px !important;
 }
 .sun_graphic .fill {
   fill: #E5D9C7;
